# cas-deep-learning-project-tennis

./: .gitignore  correct_files.py  extract_sequences.py  final_testing (1).ipynb  key_point_detection.ipynb  pose_estimation_gradient_boost.ipynb  pyproject.toml  resnet_updated_test_two_datasets.ipynb
